best-practices-vpol/require-drop-cap-net-raw/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-drop-cap-net-raw
policies:
- ../require-drop-cap-net-raw.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: drop-cap-net-raw
  resources:
  - badpod01
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: drop-cap-net-raw
  resources:
  - badpod02
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: drop-cap-net-raw
  resources:
  - drop-good
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: drop-cap-net-raw
  resources:
  - exception-net-raw
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: drop-cap-net-raw
  resources:
  - exception-net-raw-positive
  result: pass
